# nn-template

./: .gitignore  README.md  pyproject.toml  setup.py  setup.sh
analysis/: sources.py
cli/: check.py  nntemp.py  run_train.py
experimentations/: .gitignore  TestDataset.ipynb  __init__.py  check_cfg.py  run_train.py  train_multiple.py  train_single.py
experimentations/src/: __init__.py
experimentations/src/datasets/: __init__.py  cv2_parse.py  data_augment.py  datasets.py  generic_hdf.py
experimentations/src/trainer/: __init__.py  callbacks.py  classifier_net.py  loggers.py  losses.py  lut.py
lib/nn_template/: __init__.py  experiment.py  hardware.py  optuna.py  training.py
lib/nn_template/callbacks/: log_artifacts.py
lib/nn_template/config/: __init__.py  cfg_dict.py  cfg_object.py  cfg_parser.py  config.py  config_dict.py  config_parser.py  hyperparameter_optimization.py  optuna.py
lib/nn_template/data_augmentation/: __init__.py  data_augment.py  random_dist.py
lib/nn_template/datasets/: __init__.py  data_augment.py  data_sources.py  dataset.py  hdf,py.py  hdf_py.py  path_utils.py  utils2d.py
lib/nn_template/hyperparameters_tuning/: generic_optimizer.py  optuna.py
lib/nn_template/misc/: clip_pad.py  function_tools.py  lut.py
lib/nn_template/model/: __init__.py  models.py  smp.py  unet.py  wnet.py
lib/nn_template/nn_misc/: clip_pad.py
lib/nntemplate/: __init__.py  experiment.py  hardware.py  training.py
samples/: DataAugmentation.ipynb  exp-parsing.ipynb  sources.py
samples/yaml-demos/: demo.yaml  inherit-ref.yaml  inheritage.yaml
scripts/: run_train.py  train_multiple.py
unit_test/: DataAugmentation.ipynb  demo_refs.yaml  exp-parsing.ipynb  parsing.ipynb  yaml-syntax.ipynb
unit_test/yaml-demos/: demo.yaml  inherit-ref.yaml  inheritage.yaml  references.yaml  versions.yaml
(+62 files in other folders)
