[project]

name = "nntemplate"
version = '0.0.5'
authors = [
    {name= 'Gabriel Lepetit-Aimon', email= 'gabriel.lepetit-aimon@polymtl.ca'},
]
description = """A bundle of templated and configurable tools to train neural networks on image segmentation or classification."""
readme = 'README.md'

requires-python = '>=3.10'
dependencies = [
    'albumentations',
    'numpy',
    'opencv-python-headless',
    'optuna',
    'parse',
    'pandas',
    'pytorch-lightning',
    'pyyaml',
    'segmentation-models-pytorch',
    'torch',
    'torchgeometry',
    'torchmetrics',
    'torchvision',
    'ttach',
    'webcolors',
    'wandb',
]

[project.urls]
Homepage = 'https://github.com/gabriel-lepetitaimon/nn-template'
Source = 'https://github.com/gabriel-lepetitaimon/nn-template'


[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "lib"}